// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KModalFullscreen matches snapshot 1`] = `undefined`;

exports[`KModalFullscreen renders proper content when using action-buttons slot 1`] = `
<div aria-label="Test Me" role="dialog" aria-modal="true" class="k-modal-fullscreen isOpen">
  <div class="k-modal-dialog">
    <div class="k-modal-header">
      <div role="heading" aria-level="2" class="k-modal-header-description mb-5">
        <div class="k-modal-title"><span class="header-icon"><span class="kong-icon mr-2 kong-icon-kong"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Kong</title>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m16.28 36.66 1-1.3h7.45l3.88 4.96-.7 1.68h-9.6l.24-1.68-2.27-3.66Z" fill="#169FCC"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m18.55 19.75 3.6-6.21h4.19L45.1 35.35 43.65 42H35.6l.5-1.87-17.55-20.38Z" fill="#14B59A"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m22.92 12.36 1.72-3.19L29.8 5l8.85 6.94-1.15 1.17 1.54 2.13v2.28l-4.4 3.6-7.4-8.76h-4.32Z" fill="#1BC263"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.25 26.23h2.33l6.1-5.1 8.08 9.4-2.28 3.41h-7.46l-5.15 6.55L9.7 42H3v-8.03l6.25-7.74Z" fill="#16BDCC"></path>
</svg>
</span></span> <span class="header-content">Test Me</span></div>
        <div class="k-modal-action ml-3">
          <div>This is some action buttons text</div>
        </div>
      </div>
      <div>
        <hr>
      </div>
    </div>
    <div class="k-modal-body-description"></div>
    <div class="k-modal-body"></div>
  </div>
</div>
`;

exports[`KModalFullscreen renders proper content when using props 1`] = `
<div aria-label="Sweet prop title" role="dialog" aria-modal="true" class="k-modal-fullscreen isOpen">
  <div class="k-modal-dialog">
    <div class="k-modal-header">
      <div role="heading" aria-level="2" class="k-modal-header-description mb-5">
        <div class="k-modal-title"><span class="header-icon"><span class="kong-icon mr-2 kong-icon-kong"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Kong</title>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m16.28 36.66 1-1.3h7.45l3.88 4.96-.7 1.68h-9.6l.24-1.68-2.27-3.66Z" fill="#169FCC"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m18.55 19.75 3.6-6.21h4.19L45.1 35.35 43.65 42H35.6l.5-1.87-17.55-20.38Z" fill="#14B59A"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m22.92 12.36 1.72-3.19L29.8 5l8.85 6.94-1.15 1.17 1.54 2.13v2.28l-4.4 3.6-7.4-8.76h-4.32Z" fill="#1BC263"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.25 26.23h2.33l6.1-5.1 8.08 9.4-2.28 3.41h-7.46l-5.15 6.55L9.7 42H3v-8.03l6.25-7.74Z" fill="#16BDCC"></path>
</svg>
</span></span> <span class="header-content">Sweet prop title</span></div>
        <div class="k-modal-action ml-3"><button type="button" class="k-button  mr-2 medium rounded outline">
            Cancel
            <!----></button> <button type="button" class="k-button medium rounded primary">
            Save
            <!----></button></div>
      </div>
      <div>
        <hr>
      </div>
    </div>
    <div class="k-modal-body-description"></div>
    <div class="k-modal-body">Sweet prop content</div>
  </div>
</div>
`;

exports[`KModalFullscreen renders proper content when using slots 1`] = `
<div aria-label="This is some header text" role="dialog" aria-modal="true" class="k-modal-fullscreen isOpen">
  <div class="k-modal-dialog">
    <div class="k-modal-header">
      <div role="heading" aria-level="2" class="k-modal-header-description mb-5">
        <div class="k-modal-title"><span class="header-icon"><span class="kong-icon mr-2 kong-icon-kong"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Kong</title>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m16.28 36.66 1-1.3h7.45l3.88 4.96-.7 1.68h-9.6l.24-1.68-2.27-3.66Z" fill="#169FCC"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m18.55 19.75 3.6-6.21h4.19L45.1 35.35 43.65 42H35.6l.5-1.87-17.55-20.38Z" fill="#14B59A"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="m22.92 12.36 1.72-3.19L29.8 5l8.85 6.94-1.15 1.17 1.54 2.13v2.28l-4.4 3.6-7.4-8.76h-4.32Z" fill="#1BC263"></path>
  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.25 26.23h2.33l6.1-5.1 8.08 9.4-2.28 3.41h-7.46l-5.15 6.55L9.7 42H3v-8.03l6.25-7.74Z" fill="#16BDCC"></path>
</svg>
</span></span> <span class="header-content"><div>This is some header text</div></span></div>
        <div class="k-modal-action ml-3"><button type="button" class="k-button  mr-2 medium rounded outline">
            Cancel
            <!----></button> <button type="button" class="k-button medium rounded primary">
            Save
            <!----></button></div>
      </div>
      <div>
        <hr>
      </div>
    </div>
    <div class="k-modal-body-description"></div>
    <div class="k-modal-body">
      <div>This is some body text</div>
    </div>
  </div>
</div>
`;
